tests/ui/impl-trait/no-trait.stderr
error: at least one trait must be specified
  --> $DIR/no-trait.rs:1:11
   |
LL | fn f() -> impl 'static {}
   |           ^^^^^^^^^^^^

error: aborting due to 1 previous error

