tests/ui/impl-trait/no-trait.rs
fn f() -> impl 'static {} //~ ERROR at least one trait must be specified

fn main() {}
